--- a/SpaceWars/WebContent/content/css/styles.css
+++ b/SpaceWars/WebContent/content/css/styles.css
@@ -15,6 +15,10 @@ body{
 	border: none;
 	background-color: transparent;
 }
+.corners {
+border-radius: 6px !important;
+	
+}
 .menu-box {
   background: rgba(238, 238, 238, 0.6);
   max-width: 350px;
@@ -57,15 +61,7 @@ body{
     opacity: 1 !important;
     
   }
-.btn-group > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
 
-}
-.btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
-
-}
-.btn-group > .btn:last-child:not(:first-child), .btn-group > .dropdown-toggle:not(:first-child) {
-
-}
 .center-button{
 float: right !important;
 margin-right: 15px;
