--- a/SpaceWars/WebContent/content/css/game.css
+++ b/SpaceWars/WebContent/content/css/game.css
@@ -1,7 +1,7 @@
 body {
 	/* padding-top: 40px;
   padding-bottom: 40px;*/
-	background: url(bg-game.jpg) repeat center center fixed;
+	background: url(../resources/images/bg/bg-game.jpg) repeat center center fixed;
 }
 
 h4, .h4 {
