--- a/SpaceWars/WebContent/content/css/signin.css
+++ b/SpaceWars/WebContent/content/css/signin.css
@@ -2,7 +2,7 @@ body {
  /* padding-top: 40px;
   padding-bottom: 40px;*/
 
-  background: url(bg.jpg) no-repeat center center fixed;
+  background: url(../resources/images/bg/bg.jpg) no-repeat center center fixed;
 }
 
 .form-signin {
