--- a/SpaceWars/WebContent/content/css/styles.css
+++ b/SpaceWars/WebContent/content/css/styles.css
@@ -46,6 +46,7 @@ body {
 	text-align: left;
 	width: 200px;
 }
+
 .samewidthplus {
 	text-align: left;
 	width: 300px;
@@ -111,6 +112,10 @@ img {
 	position: absolute;
 	z-index: 3;
 	display: none;
-	background: rgba(255, 255, 255, 0.9);	
+	background: rgba(255, 255, 255, 0.9);
 	width: 80%;
+}
+
+.end-box {
+	background-image: url(../resources/images/bg/bg-game.jpg);
 }
